navbar - click issue on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,16 @@ body{
     background-color: #252830;
 }
 
-.padding-top{
+.padding-top {
     padding-top: 80px;
 }
 
 .navbar {
     box-shadow: 0px 1px 10px #3a3a3a;
+}
+
+.navbar-toggler {
+    z-index: 9999;
 }
 
 #homepage-container {
